Adressed multiple issues in the "add/subtract values" dialog introduced with the last new features in this area - baseline subtractions, preview of the results and working with differences:

* hide the preview option for Matrix, not supported yet, needs to be done differently than for the Spreadsheet
* properly initialize the start and end values if add/subtract is done based on the difference of values
* properly add/subtract values instead of showing "wrong value provided"

BUG: 493523
FIXED-IN: 2.12